completed webpage skeleton

--- a/index.html
+++ b/index.html
@@ -3,10 +3,54 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
         <script src="./model.js"></script>
+        <link rel="stylesheet" href="index.css">
+        <title>Document</title>
     </head>
     <body>
-        <!-- buttons -->
+        <div class="background-container">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div id="calculator-container">
+            <div id="display"></div>
+            <div id="controls-container">
+                <div class="controls-row">
+                    <div class="controls-button" id="7">7</div>
+                    <div class="controls-button" id="8">8</div>
+                    <div class="controls-button" id="9">9</div>
+                    <div class="controls-button" id="divide">/</div>
+                </div>
+                <div class="controls-row">
+                    <div class="controls-button" id="4">4</div>
+                    <div class="controls-button" id="5">5</div>
+                    <div class="controls-button" id="6">6</div>
+                    <div class="controls-button" id="multiply">x</div>
+                </div>
+                <div class="controls-row">
+                    <div class="controls-button" id="1">1</div>
+                    <div class="controls-button" id="2">2</div>
+                    <div class="controls-button" id="3">3</div>
+                    <div class="controls-button" id="subtract">-</div>
+                </div>
+                <div class="controls-row">
+                    <div class="controls-button" id="0">0</div>
+                    <div class="controls-button" id="pos_neg">.</div>
+                    <div class="controls-button" id="decimal">+/-</div>
+                    <div class="controls-button" id="addition">+</div>
+                </div>
+                <div class="controls-row">
+                    <div class="controls-button">AC</div>
+                    <div class="controls-button"> =</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
