Complete background image

--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="./model.js"></script>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index.css" />
         <title>Document</title>
     </head>
     <body>
         <div class="background-container">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><span>calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span>ulator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span>tor&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span>calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span>ator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span>culator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
         </div>
 
         <div id="calculator-container">
@@ -48,7 +46,7 @@
                 </div>
                 <div class="controls-row">
                     <div class="controls-button">AC</div>
-                    <div class="controls-button"> =</div>
+                    <div class="controls-button">=</div>
                 </div>
             </div>
         </div>
