--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
         </div>
 
         <div id="calculator-container">
-            <div id="display"></div>
+            <div id="display"><div>123489</div></div>
             <div id="controls-container">
                 <div class="controls-row">
-                    <div class="controls-button" id="7">7</div>
-                    <div class="controls-button" id="8">8</div>
-                    <div class="controls-button" id="9">9</div>
-                    <div class="controls-button" id="divide">/</div>
+                    <button class="controls-button" id="button-7">7</button>
+                    <button class="controls-button" id="button-8">8</button>
+                    <button class="controls-button" id="button-9">9</button>
+                    <button class="controls-button" id="divide">/</button>
                 </div>
                 <div class="controls-row">
-                    <div class="controls-button" id="4">4</div>
-                    <div class="controls-button" id="5">5</div>
-                    <div class="controls-button" id="6">6</div>
-                    <div class="controls-button" id="multiply">x</div>
+                    <button class="controls-button" id="button-4">4</button>
+                    <button class="controls-button" id="button-5">5</button>
+                    <button class="controls-button" id="button-6">6</button>
+                    <button class="controls-button" id="multiply">x</button>
                 </div>
                 <div class="controls-row">
-                    <div class="controls-button" id="1">1</div>
-                    <div class="controls-button" id="2">2</div>
-                    <div class="controls-button" id="3">3</div>
-                    <div class="controls-button" id="subtract">-</div>
+                    <button class="controls-button" id="button-1">1</button>
+                    <button class="controls-button" id="button-2">2</button>
+                    <button class="controls-button" id="button-3">3</button>
+                    <button class="controls-button" id="subtract">-</button>
                 </div>
                 <div class="controls-row">
-                    <div class="controls-button" id="0">0</div>
-                    <div class="controls-button" id="pos_neg">.</div>
-                    <div class="controls-button" id="decimal">+/-</div>
-                    <div class="controls-button" id="addition">+</div>
+                    <button class="controls-button" id="button-0">0</button>
+                    <button class="controls-button" id="decimal">.</button>
+                    <button class="controls-button" id="pos_neg">+/-</button>
+                    <button class="controls-button" id="add">+</button>
                 </div>
                 <div class="controls-row">
-                    <div class="controls-button">AC</div>
-                    <div class="controls-button">=</div>
+                    <button class="controls-button" id="CE_AC">AC</button>
+                    <button class="controls-button" id="enter">=</button>
                 </div>
             </div>
         </div>
