Done. still a buggy mess though!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="./model.js"></script>
+        <script src="./controller.js" defer></script>
         <link rel="stylesheet" href="index.css" />
         <title>Document</title>
     </head>
@@ -18,7 +18,7 @@
         </div>
 
         <div id="calculator-container">
-            <div id="display"><div>123489</div></div>
+            <div id="display"><div></div></div>
             <div id="controls-container">
                 <div class="controls-row">
                     <button class="controls-button" id="button-7">7</button>
@@ -45,7 +45,7 @@
                     <button class="controls-button" id="add">+</button>
                 </div>
                 <div class="controls-row">
-                    <button class="controls-button" id="CE_AC">AC</button>
+                    <button class="controls-button" id="CE_AC">CE</button>
                     <button class="controls-button" id="enter">=</button>
                 </div>
             </div>
