final version 2.0, minor updates

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     </head>
     <body>
         <div class="background-container">
-            <div><span>calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
-            <div><span>ulator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
-            <div><span>tor&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
-            <div><span>calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
-            <div><span>ator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
-            <div><span>culator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span class="span-1">calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span>
+                 <span class="span-1">&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span class="span-2">calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span>
+                 <span class="span-2">&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span class="span-3">calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span>
+                 <span class="span-3">&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span class="span-4">calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span>
+                 <span class="span-4">&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            <div><span class="span-5">calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span>
+                 <span class="span-5">&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator&nbsp;&nbsp;calculator</span></div>
+            
         </div>
 
         <div id="calculator-container">
